--- a/ddpm/config/trainer/celebahq_hugginface.yaml
+++ b/ddpm/config/trainer/celebahq_hugginface.yaml
@@ -2,7 +2,7 @@ defaults:
   - base_trainer
 name: celeba_diffusion
 platform: local
-single_gpu: true
+single_gpu: false
 type: hugginface
 
 # train: True #train from scratch
@@ -12,13 +12,15 @@ qualitative_experiment: True
 # Model ID hugginface
 model_id: google/ddpm-ema-celebahq-256
 log_root: /home/bastienvandelft/results #/mnt/scitas/bastien
+random_seed: true
 
 # Dataset
 datapath: /home/bastienvandelft/Datasets/CelebAMask-HQ/CelebA-HQ-img #/mnt/scitas/bastien/CelebAMask-HQ/CelebA-HQ-img #help='dataset path if downloaded
 dataset: CELEBAHQ #help='dataset name')
-exp_name_folder: 
-lsun_category: None # one of ["bedroom","bridge","church_outdoor","classroom","conference_room","dining_room","kitchen","living_room","restaurant","tower",
-corruptions_list: ['fog', 'contrast', 'spatter'] #,"frost","speckle_noise","elastic_transform",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color',"brightness"] 
+exp_name_folder: visuals_fog_frost
+lsun_category: # one of ["bedroom","bridge","church_outdoor","classroom","conference_room","dining_room","kitchen","living_room","restaurant","tower",
+corruptions_list: ['fog', 'contrast'] #['gaussian_blur',"frost","speckle_noise","snow","motion_blur","pixelate","glass_blur",
+                  #"elastic_transform",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color'] 
                   #["frost", "speckle_noise",'impulse_noise', "shot_noise", "gaussian_noise","jpeg_compression","pixelate",
                   #"fog","gaussian_blur","elastic_transform", "motion_blur","glass_blur","brightness", "saturate",
                   #'snow', 'masking_vline_random_color', 'spatter', 'contrast', 'masking_random_color']
@@ -37,26 +39,26 @@ run_sdedit: true
 run_all_epsilon: true
 use_std_schedule: false
 number_of_image: 1000
-number_of_sample: 2
+number_of_sample: 4
 image_number: 
-batch_size: 2 #help='batch size'
-annealing: 1
+batch_size: 1 #help='batch size'
+annealing: 10
 annealing_cst: 0.75
 normalize: false 
 normalize_mean: false
 clip_inputs: false
 number_of_stds: 3
-min_epsilon: 1e-5
-max_epsilon: 1e-4
-number_of_epsilons: 5
-dynamic_thresholding_langevin: true
+min_epsilon: 1e-6
+max_epsilon: 2e-4
+number_of_epsilons: 6
+dynamic_thresholding_langevin: false
 dynamic_thresholding_ddim: true
 dynamic_threshol_ratio: 0.98
 dynamic_threshold_max: 1.3
 number_of_latents_corrected: 2
-min_latent_space_update: 199
+min_latent_space_update: 99
 ode_range: [999, 1000, 1]
-sde_range: [199,500,100]
+sde_range: [199,400,100]
 # Logging & Sampling
 number_of_steps: 1000
 logdir: ${trainer.log_root}/logs/CelebaHQ #help='log directory')
