--- a/ddpm/config/trainer/lsun_church_hugginface.yaml
+++ b/ddpm/config/trainer/lsun_church_hugginface.yaml
@@ -9,20 +9,21 @@ type: hugginface
 # eval: False #load ckpt.pt and evaluate FID and IS
 test_session: False
 qualitative_experiment: True
-
+random_seed: false
 
 
 # Dataset
 datapath: /home/bastienvandelft/scitas/bastien/lsun #/home/bastienvandelft/Datasets/CelebAMask-HQ/CelebA-HQ-img #/mnt/scitas/bastien/CelebAMask-HQ/CelebA-HQ-img #help='dataset path if downloaded
 dataset: LSUN #help='dataset name')
-exp_name_folder:
+exp_name_folder: visuals_56627
 lsun_category: church_outdoor #"bedroom" # one of ["bedroom","bridge","church_outdoor","classroom","conference_room","dining_room","kitchen","living_room","restaurant","tower",
-corruptions_list: ['fog', 'contrast', 'spatter',"frost","speckle_noise","elastic_transform","glass_blur",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color',"brightness"] 
+corruptions_list: ['gaussian_blur',"frost","speckle_noise","snow","motion_blur","pixelate","glass_blur",
+                  "elastic_transform",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color'] 
                   #["frost", "speckle_noise",'impulse_noise', "shot_noise", "gaussian_noise","jpeg_compression","pixelate",
                   #"fog","gaussian_blur","elastic_transform", "motion_blur","glass_blur","brightness", "saturate",
                   #'snow', 'masking_vline_random_color', 'spatter', 'contrast', 'masking_random_color']
 split: all
-use_val: true
+use_val: false
 num_workers: 4 #help='workers of Dataloader')
 corruption:  #help=corruption type base on Imagenet-C
 corruption_severity:  #help='corruption severity level 1-5'
@@ -41,7 +42,7 @@ run_all_epsilon: true
 use_std_schedule: false
 number_of_image: 1000
 number_of_sample: 4
-image_number: 
+image_number: 56627
 batch_size: 1 #help='batch size'
 annealing: 10
 annealing_cst: 0.8
@@ -49,16 +50,16 @@ normalize: false
 normalize_mean: false
 clip_inputs: false
 number_of_stds: 3
-min_epsilon: 5e-6
-max_epsilon: 1e-4
-number_of_epsilons: 10
+min_epsilon: 5e-4
+max_epsilon: 1e-1
+number_of_epsilons: 12
 dynamic_thresholding_langevin: false
 dynamic_thresholding_ddim: true
 dynamic_threshol_ratio: 0.98
 dynamic_threshold_max: 1.3
 number_of_latents_corrected: 2
-min_latent_space_update: 99
-ode_range: [999, 1000, 1]
+min_latent_space_update: 80
+ode_range: [199, 200, 1]
 sde_range: [199,500,100]
 # Logging & Sampling
 number_of_steps: 1000
