--- a/ddpm/config/trainer/lsun_hugginface.yaml
+++ b/ddpm/config/trainer/lsun_hugginface.yaml
@@ -9,6 +9,7 @@ type: hugginface
 # eval: False #load ckpt.pt and evaluate FID and IS
 test_session: False
 qualitative_experiment: True
+random_seed: false
 
 # Model ID hugginface
 model_id: google/ddpm-ema-bedroom-256 #"google/ddpm-ema-church-256"
@@ -17,14 +18,15 @@ log_root: /home/bastienvandelft/results/lsun #/mnt/scitas/bastien
 # Dataset
 datapath: /home/bastienvandelft/scitas/bastien/lsun #/home/bastienvandelft/Datasets/CelebAMask-HQ/CelebA-HQ-img #/mnt/scitas/bastien/CelebAMask-HQ/CelebA-HQ-img #help='dataset path if downloaded
 dataset: LSUN #help='dataset name')
-exp_name_folder: 
+exp_name_folder: visual_2455720
 lsun_category: "bedroom" # one of ["bedroom","bridge","church_outdoor","classroom","conference_room","dining_room","kitchen","living_room","restaurant","tower",
-corruptions_list: ['fog', 'contrast', 'spatter',"frost","speckle_noise","elastic_transform","glass_blur",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color',"brightness"] 
+corruptions_list: ['gaussian_blur',"frost","speckle_noise","snow","motion_blur","pixelate","glass_blur",
+                  "elastic_transform",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color'] 
                   #["frost", "speckle_noise",'impulse_noise', "shot_noise", "gaussian_noise","jpeg_compression","pixelate",
                   #"fog","gaussian_blur","elastic_transform", "motion_blur","glass_blur","brightness", "saturate",
                   #'snow', 'masking_vline_random_color', 'spatter', 'contrast', 'masking_random_color']
 split: all
-use_val: true
+use_val: false
 num_workers: 4 #help='workers of Dataloader')
 corruption:  #help=corruption type base on Imagenet-C
 corruption_severity:  #help='corruption severity level 1-5'
@@ -39,27 +41,27 @@ run_all_epsilon: true
 use_std_schedule: false
 number_of_image: 1000
 number_of_sample: 4
-image_number: 
+image_number: 2455720
 batch_size: 1 #help='batch size'
-annealing: 1
+annealing: 10
 annealing_cst: 0.75
 normalize: false 
 normalize_mean: false
 clip_inputs: false
 number_of_stds: 3
-min_epsilon: 5e-6
-max_epsilon: 2e-4
-number_of_epsilons: 10
-dynamic_thresholding_langevin: true
+min_epsilon: 1e-4
+max_epsilon: 1e-1
+number_of_epsilons: 12
+dynamic_thresholding_langevin: False
 dynamic_thresholding_ddim: true
 dynamic_threshol_ratio: 0.95
 dynamic_threshold_max: 1.3
 number_of_latents_corrected: 2
-min_latent_space_update: 99 
-ode_range: [999, 1000, 1]
+min_latent_space_update: 80
+ode_range: [199, 200, 1]
 sde_range: [199,500,100]
 # Logging & Sampling
-number_of_steps: 600
+number_of_steps: 1000
 logdir: ${trainer.log_root}/logs/LSUN #help='log directory')
 wandb_entity: bastienvd #help='wandb id to use')
 ml_exp_name: ${trainer.dataset}_${trainer.lsun_category}_folder_${trainer.exp_name_folder} #help = 'name of the experience on wandb')
