--- a/ddpm/config/trainer/celebahq_hugginface.yaml
+++ b/ddpm/config/trainer/celebahq_hugginface.yaml
@@ -17,14 +17,20 @@ random_seed: true
 # Dataset
 datapath: /home/bastienvandelft/Datasets/CelebAMask-HQ/CelebA-HQ-img #/mnt/scitas/bastien/CelebAMask-HQ/CelebA-HQ-img #help='dataset path if downloaded
 dataset: CELEBAHQ #help='dataset name')
-exp_name_folder: tests_corruptions
+exp_name_folder: fid
 lsun_category: # one of ["bedroom","bridge","church_outdoor","classroom","conference_room","dining_room","kitchen","living_room","restaurant","tower",
-corruptions_list: ['fog', 'contrast'] #['gaussian_blur',"frost","speckle_noise","snow","motion_blur","pixelate","glass_blur",
+corruptions_list: ["pixelate","gaussian_blur"] #, 'masking_random_color','masking_vline_random_color'] #['gaussian_blur',"frost","speckle_noise","snow","motion_blur","pixelate","glass_blur",
                   #"elastic_transform",'impulse_noise', "shot_noise", "gaussian_noise",'masking_vline_random_color','masking_random_color'] 
                   #["frost", "speckle_noise",'impulse_noise', "shot_noise", "gaussian_noise","jpeg_compression","pixelate",
                   #"fog","gaussian_blur","elastic_transform", "motion_blur","glass_blur","brightness", "saturate",
                   #'snow', 'masking_vline_random_color', 'spatter', 'contrast', 'masking_random_color']
-new_corruptions_list: ['cocentric_sine_waves']
+new_corruptions_list: ["caustic_refraction","scatter","caustic_noise", "fish_eye", "cocentric_sine_waves","inverse_sparkles","pinch_and_twirl","water_drop", "brownish_noise"] # "checkerboard_cutout", "perlin_noise", "plasma_noise"]
+                        #["lines", "blue_noise_sample", "caustic_refraction","pinch_and_twirl", "fish_eye", "water_drop", "ripple", 
+                        #"perspective_no_bars","quadrilateral_no_bars", "scatter", "chromatic_abberation", "transverse_chromatic_abberation","circular_motion_blur",]
+                        #["single_frequency_greyscale", "cocentric_sine_waves", "plasma_noise", "voronoi_noise",
+                        #"caustic_noise", 'sparkles', "inverse_sparkles", "perlin_noise", "blue_noise", "brownish_noise",
+                        #"bleach_bypass", "technicolor", "pseudocolor", "hue_shift", "color_dither",
+                        #"checkerboard_cutout"] 
 split: all
 use_val: false
 num_workers: 4 #help='workers of Dataloader')
@@ -36,36 +42,35 @@ random_flip: False #help='Whether to use random flip in training')
 img_size: 256 #help='image size')
 
 # Inference
-run_sdedit: false
+run_sdedit: true
 run_all_epsilon: true
 use_std_schedule: false
 number_of_image: 1000
 number_of_sample: 1
 image_number: 
 batch_size: 1 #help='batch size'
-annealing: 10
-annealing_cst: 0.75
+annealing: 4
+annealing_cst: 0.8
 normalize: false 
 normalize_mean: false
-clip_inputs: false
-number_of_stds: 3
-min_epsilon: 1e-6
-max_epsilon: 2e-4
-number_of_epsilons: 6
-dynamic_thresholding_langevin: false
+number_of_stds: 1.7
+min_epsilon: 1e-4
+max_epsilon: 2e-3
+number_of_epsilons: 3
+dynamic_thresholding_langevin: true
 dynamic_thresholding_ddim: true
-dynamic_threshol_ratio: 0.99
+dynamic_threshol_ratio: 0.98
 dynamic_threshold_max: 1.3
-number_of_latents_corrected: 2
-min_latent_space_update: 99
+number_of_latents_corrected: 1
+min_latent_space_update: 101
 clip_input_encoding: true
 clip_input_decoding: false
 clip_inputs_langevin: false
 stop_clipping_at: 0
-start_from_latent: True
-ode_range: [199, 200, 1]
-sde_range: [199,400,100]
-number_of_timesteps: 200
+start_from_latent: true
+ode_range: [100, 500, 499]
+sde_range: [399,400,500]
+number_of_timesteps: 500
 # Logging & Sampling
 number_of_steps: [200]
 logdir: ${trainer.log_root}/logs/CelebaHQ #help='log directory')
